--- a/_posts/2019-12-11-HTML之基础.md
+++ b/_posts/2019-12-11-HTML之基础.md
@@ -49,11 +49,7 @@ tags:
   **特点：结合的行内和块级的优点，不仅可以对宽高属性值生效，还可以多个标签存在一行显示。（不会换行，有宽高。）**
   
   **`display:inline;`把块级标签转换为行内标签；`display:block;`把行内标签转换为块级标签；`display：inline-block;`把其它两种标签转换为行内块标签。**
-
-  
 ### 简易标签
-
-
 
 * `<!DOCTYPE html>`声明为HTML5文档。
 
@@ -102,7 +98,6 @@ tags:
 * `<figcaption>`标签是与其相关联的图片的说明/标题，用于描述其父节点`<figure>`元素里的其他数据。这意味着`<figcaption>`在`<figure>`块里是第一个或最后一个。同时 HTML Figcaption 元素是可选的；如果没有该元素，这个父节点的图片只是会没有说明/标题,对于`<figure>`中的其它事物是没有影响的。
   
      例如：
-          
           <figure>
             <img src="https://raw.githubusercontent.com/mdn/learning-area/master/html/multimedia-and-embedding/images-in-html/dinosaur_small.jpg"
                alt="一只恐龙头部和躯干的骨架，它有一个巨大的头，长着锋利的牙齿。"
@@ -113,7 +108,8 @@ tags:
      
      输出：
      
- ![example001](/img/example001.png) 
+
+ ![example001](../img/example001.png) 
 
 
 * `<video>`:可以在网页中插入一段视频。`src`,作用同上`img`中的`src`。`controls`:加上这个属性后，就可以允许用户控制视频的播放，包括音量，跨帧，暂停/恢复播放；不再需要用户自己定义组件。
@@ -471,7 +467,7 @@ tags:
     输出：
 
 
-   ![code_print](/img/print.png)
+   ![code_print](../img/print.png)
 
 * `<main>`:存放每个页面独有的内容。每个页面上只能用**一次**`<main>`，且直接位于`<body>`中。最好**不要**把它嵌套到其它元素里面。
 
@@ -529,7 +525,7 @@ tags:
           </html>
      
      输出：
-![page_1](/img/page_1.png)
+![page_1](../img/page_1.png)
 
 * `<span>`:无语义行内标签。标签里面使用`class`、`id`属性，使其在CSS、JS中能很好的被引用。
 
