--- a/_posts/2020-2-16-Mysql的基本知识.md
+++ b/_posts/2020-2-16-Mysql的基本知识.md
@@ -23,8 +23,8 @@ tags:
 
 > ​	在我的电脑里面的环境变量`path`中添加`D:\Program Files\MySQL\MySQL Server 5.5\bin;`
 
-- 数据库的进入      方式一： `mysql -uroot -p`，输入密码。方式二：`mysql -uroot -hlocalhost -p`再输入密码。
-- 数据库的退出       `exit`或者`quit`。
+- 数据库的进入方式一： `mysql -uroot -p`，输入密码。方式二：`mysql -uroot -hlocalhost -p`再输入密码。
+- 数据库的退出 `exit`或者`quit`。
 
 #### MYSQL数据类型
 
@@ -161,21 +161,18 @@ tags:
     Query OK, 1 row affected, 3 warnings (0.06 sec)
     ```
 
-    
-
   - 第三种插入方法（不使用）：
 
-        ```mysql
-        mysql> insert into user values(6,'王五','888888','wangwu@163.com','45214563211',55.22,45);
-        Query OK, 1 row affected (0.06 sec)
-          
-        ```
+    ```mysql
+  mysql> insert into user values(6,'王五','888888','wangwu@163.com','45214563211',55.22,45);
+    Query OK, 1 row affected (0.06 sec)
+    ```
     效果如下：
-
-    ​			![插入语句](/img/Mysql_01.png)
-
-    **在进行插入操作时，所插入值和字段是一一对应的。**
-
+    
+  ​			![插入语句](../img/Mysql_01.png)
+    
+**在进行插入操作时，所插入值和字段是一一对应的。**
+  
 - 更新
 
   ```mysql
@@ -193,7 +190,7 @@ tags:
 
   结果为：
 
-  ​		![更新操作](/img/Mysql_02.png)
+  ​		![更新操作](../img/Mysql_02.png)
 
   **不写条件会修改所有的数据。**
 
@@ -203,7 +200,7 @@ tags:
 delete from 表名 where 条件；		
 ```
 
-​			![删除操作](/img/Mysql_03.png)
+​			![删除操作](../img/Mysql_03.png)
 
 **不写条件会删除所有的数据**。清空表中数据的两种方法：`delete from 表名`或者`truncate 表名`。第二种会把自增的`id`也清除，`delete`不会删除自增的`id`。
 
@@ -220,7 +217,7 @@ delete from 表名 where 条件；
   mysql> flush privileges;
   ```
 
-  ​	![修改连接方式](/img/Mysql_04.png)
+  ​	![修改连接方式](../img/Mysql_04.png)
 
 - 修改密码
 
@@ -233,7 +230,7 @@ delete from 表名 where 条件；
     mysql> flush privileges;
     ```
 
-    ​		![修改密码](/img/Mysql_05.png)
+    ​		![修改密码](../img/Mysql_05.png)
 
   -   
 
@@ -268,11 +265,11 @@ delete from 表名 where 条件；
   create user 用户名 @'IP地址' identified by '密码'；
   ```
 
-  ![创建用户](/img/Mysql_06.png)
+  ![创建用户](../img/Mysql_06.png)
 
   创造的这一个用户只能在指定的ip地址上登陆数据库，要想要在任意的ip上登陆数据库，要把`ip地址`写成`%`。
 
-  ![任意ip登陆](/img/Mysql_07.png)
+  ![任意ip登陆](../img/Mysql_07.png)
 
 - 用户授权：
 
@@ -280,9 +277,9 @@ delete from 表名 where 条件；
   grant 权限1,权限2,...on 数据库名.* to 用户名 @IP地址;
   ```
 
-  ![第一部分](/img/Mysql_08.png)
+  ![第一部分](../img/Mysql_08.png)
 
-  ![第二部分](/img/Mysql_09.png)
+  ![第二部分](../img/Mysql_09.png)
 
   授权该用户对所有的数据库有此权限要把`数据库名.*`写成`*.*`。
 
@@ -327,7 +324,7 @@ delete from 表名 where 条件；
   Query OK, 0 rows affected (0.00 sec)
   ```
 
-  ![撤销权限](/img/Mysql_10.png)
+  ![撤销权限](../img/Mysql_10.png)
 
 - 查看权限
 
@@ -336,7 +333,6 @@ delete from 表名 where 条件；
   ```
 
   ```mysql
-  
   mysql> show grants for test@192.168.1.106;
   +-----------------------------------------------------------------------------------------------------------------+
   | Grants for test@192.168.1.106                                                                                   |
@@ -345,9 +341,7 @@ delete from 表名 where 条件；
   +-----------------------------------------------------------------------------------------------------------------+
   1 row in set (0.00 sec)
   ```
-
   
-
 - 删除用户
 
   ```mysql
