--- a/_posts/2020-4-16-IP地址详解和基本的DOS命令.md
+++ b/_posts/2020-4-16-IP地址详解和基本的DOS命令.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     day_02
+title:     IP地址详解和基本的DOS命令
 subtitle:  IP地址详解、基本的DOS命令
 date:       2020-4-16
 author:     One-Punch-Man
@@ -8,12 +8,8 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
-
-
-
-
 
 # 			IP地址详解
 
@@ -33,29 +29,25 @@ tags:
   | **每个网络中可容纳主机数（个）** | **16777214 (224-2)**        | **65534 (216-2)**             | **254 (28-2)**                | **---**                                             | **---**                                      |
   | **适用范围**                     | **大量主机的大型网络**      | **中等规模主机数的网络**      | **小型局域网**                | **留给Internet体系结构委员会(IAB)使用【组播地址】** | **保留，仅作为搜索、Internet的实验和开发用** |
 
-   
-
   > - 127.0.0.1表示回环地址，永远表示自己本身。
-  >
+>
   > - 再企业中服务器的IP地址必须是固定的，需要手动配置。
-
+  
 - **子网掩码是用来确定IP地址的网络位的位掩码。**一个IP地址必须有一个相对应的子网掩码。
 
-   
-
   | 类别 | 起始位 | 开始      | 结束          | 点分十进制掩码（默认） |
-  | ---- | ------ | --------- | ------------- | ---------------------- |
+| ---- | ------ | --------- | ------------- | ---------------------- |
   | A    | 0      | 0.0.0.0   | 127.0.0.0     | 255.0.0.0              |
   | B    | 10     | 128.0.0.0 | 191.255.0.0   | 255.255.0.0            |
   | C    | 110    | 192.0.0.0 | 223.255.255.0 | 255.255.255.0          |
-
+  
 - **网关（GATEWAY=GW）是负责内外网进行数据传输的出口,一般位于路由器上。**
 
   > 在公司或者企业中，网关一般为该网段可用地址的第一个或者最后一个。
 
 - **DNS**（**D**omain **N**ame **S**ystem,也叫做域名系统）是[互联网](https://zh.wikipedia.org/wiki/%E4%BA%92%E8%81%94%E7%BD%91)的一项服务。它作为将[域名](https://zh.wikipedia.org/wiki/%E5%9F%9F%E5%90%8D)和[IP地址](https://zh.wikipedia.org/wiki/IP%E5%9C%B0%E5%9D%80)相互[映射](https://zh.wikipedia.org/wiki/%E6%98%A0%E5%B0%84)的一个[分布式数据库](https://zh.wikipedia.org/wiki/%E5%88%86%E5%B8%83%E5%BC%8F%E6%95%B0%E6%8D%AE%E5%BA%93)，能够使人更方便地访问[互联网](https://zh.wikipedia.org/wiki/%E4%BA%92%E8%81%94%E7%BD%91)。 
 
-  ![网络通信](/img/day_02_01.png)
+  ![网络通信](../img/day_02_01.png)
 
 # 基本的DOS命令
 
@@ -133,4 +125,3 @@ tags:
 
 - `netstat -an`:查看端口。
 
-- 
