--- a/_posts/2020-4-21-NTFS安全权限、文件共享服务器.md
+++ b/_posts/2020-4-21-NTFS安全权限、文件共享服务器.md
@@ -8,7 +8,7 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
 
 # NTFS权限
@@ -42,11 +42,11 @@ tags:
 
 ### 文件权限
 
-![image-20200515014044745](\img\day_04_01.png)
+![image-20200515014044745](..\img\day_04_01.png)
 
 ### 文件夹权限
 
-![image-20200515014933898](\img\day_04_02.png)
+![image-20200515014933898](..\img\day_04_02.png)
 
 ### 取消权限继承
 
