--- a/_posts/2020-4-23-DHCP部署于安全、DNS部署于安全.md
+++ b/_posts/2020-4-23-DHCP部署于安全、DNS部署于安全.md
@@ -8,7 +8,7 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
 
 # DHCP安全与部署
@@ -85,7 +85,7 @@ DHCP原理也被叫作为DHCP的租约过程：
 
 ### 结构
 
-![yu](\img\day_05_02.png)
+![yu](..\img\day_05_02.png)
 
 ### 端口
 
@@ -103,7 +103,7 @@ DHCP原理也被叫作为DHCP的租约过程：
 
 ### 按查询方式
 
-![方式](\img\day_05_01.jpg)
+![方式](..\img\day_05_01.jpg)
 
 - **递归查询**：  发生在本地主机和本地域名服务器之间以及装有转发器的两台DNS服务器之间。
 - **迭代查询**：本地DNS服务器和根等其他DNS服务器之间。
