--- a/_posts/2020-4-25-IIS服务器部署、FTP服务器部署.md
+++ b/_posts/2020-4-25-IIS服务器部署、FTP服务器部署.md
@@ -8,7 +8,7 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
 
 # Web服务器
@@ -55,11 +55,11 @@ tags:
 
 - **主动模式**（Port）：客户机主动向服务器的`21`端口发送**连接**请求，账号密码验证后，客户机会发送给服务器“我开通了xxxx端口”（Port命令），然后服务器通过`20`端口向客户机的`xxxx`端口建立连接，发送数据；数据发送完毕后`20`端口和`xxxx`会自动关闭。
 
-  ![主动模式](\img\day_06_01.jpg)
+  ![主动模式](..\img\day_06_01.jpg)
 
 - **被动模式**（Pasv）：客户机主动向服务器的`21`端口发送**连接**请求，账号密码验证后，客户机会发送给服务器“请你随机开启一个端口吧”（Pasv命令），然后服务器随机开启一个高端端口（>1024）并回复客户机在这个端口上进行数据传输，然后客户机在连接到这个端口进行数据传输。
 
-  ![被动模式](\img\day_06_02.png)
+  ![被动模式](..\img\day_06_02.png)
 
 #### 两种模式的优缺点
 
