--- a/_posts/2020-4-29-PKI介绍.md
+++ b/_posts/2020-4-29-PKI介绍.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     day_08
+title:     PKI
 subtitle:  PKI
 date:       2020-4-29
 author:     One-Punch-Man
@@ -8,7 +8,7 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
 
 # PKI
@@ -78,7 +78,7 @@ Hash算法也被称为散列算法，Hash算法虽然被称为算法，但实际
 
 ### 公钥加密技术
 
-![RSA](\img\day_08_01.jpg)
+![RSA](..\img\day_08_01.jpg)
 
 > - 公钥加密技术实现了对信息加密、数字签名等安全保障。
 > - 用自己的私钥对摘要加密得出的密文就是数字签名。
