--- a/_posts/2020-5-2-445端口的利用.md
+++ b/_posts/2020-5-2-445端口的利用.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     day_09
+title:     445端口的利用
 subtitle:  渗透测试简单流程、445端口的利用
 date:       2020-5-2
 author:     One-Punch-Man
@@ -8,20 +8,8 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
-
-# 渗透测试的简单流程
-
-1. 授权
-2. 信息收集
-   - nslookup
-   - whois
-3. 扫描漏洞
-   - namp
-4. 漏洞利用
-5. 获取权限
-6. 渗透测试报告
 
 # 445端口的利用
 
