--- a/_posts/2020-5-3-PKI实验.md
+++ b/_posts/2020-5-3-PKI实验.md
@@ -8,7 +8,7 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
 
 # PKI实验演示
@@ -24,61 +24,61 @@ tags:
 
 2. 服务器端右键计算机 -> 管理 -> 角色 ->添加角色 -> 把`Active Directory 证书服务`、`DNS服务`、`WEB服务`勾上 ->点击下一步；
 
-   ![01](\img\day_09_01.png)
+   ![01](..\img\day_09_01.png)
 
 3. 直到出现**角色服**务这一页面，进行如下操作：
 
-   ![01](\img\day_09_02.png)
+   ![01](..\img\day_09_02.png)
 
 4. 然后一直下一步，直到出现**CA名称**这一页面，填写你所创建的**CA机构**的名字；然后一直点击下一步，最后点击安装；最后结果如下：
 
-   ![01](\img\day_09_03.png)
+   ![01](..\img\day_09_03.png)
 
 5. 打开IIS服务管理器 ->选择网站 —> 点击添加网站 -> 输入网站名、发布路径、IP地址、主机头 ->点击确定；
 
-   ![01](\img\day_09_04.png)
+   ![01](..\img\day_09_04.png)
 
 6. 点击刚创建的网站 -> 选中默认文档 ->点击添加 ->把网站的首页文件名添加进去；
 
 7. 打开DNS服务管理 ->右键正向查找区域 ->新建区域 ->一直点下一步直到输入区域名称，输入完后 ->下一步直到完成；
 
-   ![01](\img\day_09_05.png)
+   ![01](..\img\day_09_05.png)
 
 8. 打开刚创建的区域 ->右键点击新建主机(A)记录 ->输入名称、IP地址 ->确定：
 
-   ![01](\img\day_09_06.png)
+   ![01](..\img\day_09_06.png)
 
 9. 回到IIS服务器管理，选中**服务器的名字**，在打开的中间区域中打开**服务器证书**，在最右边的区域中选择**创建证书申请**；填写相关信息，一直点击下一步；在**文件名**那里选择你证书存放的位置（下一步会用到）；
 
-   ![01](\img\day_09_07.png)
+   ![01](..\img\day_09_07.png)
 
 10. 打开IE浏览器 ->输入`服务器IP地址\certsrv`这个地址（如果出现弹窗，点击**添加**）->在网站中点击**申请证书** ->点击高级证书申请（这是给**服务器申请证书**） ->选择 **使用base 64 编码...**这一项 ->打开**第九步**存放的证书文件，复制里面的内容，把它粘贴到**保存的申请**这一输入框中：
 
-    ![01](\img\day_09_08.png)
+    ![01](..\img\day_09_08.png)
 
 11. 打开安装好的**证书颁发机构** ->打开挂起的申请 ->右键任务 ->点击**颁发**；
 
-    ![01](\img\day_09_09.png)
+    ![01](..\img\day_09_09.png)
 
 12. 回到`10.1.1.1\certsrv`这个网站 ->选择**查看挂起的证书申请的状态** ->选择 **保存的申请证书** ->点击**下载证书** -> 保存，关闭；
 
-    ![01](\img\day_09_10.png)
+    ![01](..\img\day_09_10.png)
 
 13. 回到IIS管理器，点击服务器名字 -> 点击**服务器证书** -> 最右边区域选择**完成证书申请..** ->选择上一步保存的文件，输入证书名字，点击确定；
 
-    ![01](\img\day_09_11.png)
+    ![01](..\img\day_09_11.png)
 
 14. 右键创建的网站  ->点击**编辑绑定** ->点击添加 -> 选择**类型**、**IP地址**、**SSL证书** ->点击确定；
 
-    ![01](\img\day_09_12.png)
+    ![01](..\img\day_09_12.png)
 
 15.  选择创建的网站 -> 在中间区域点击**SSL设置** ->勾上**要求SSL** ->点击应用；
 
-    ![01](\img\day_09_13.png)
+    ![01](..\img\day_09_13.png)
 
 16. 打开客户机的IE浏览器，分别输入`http`和`https`的网站，效果如下：
 
-    ![01](\img\day_09_14.png)
+    ![01](..\img\day_09_14.png)
 
 ### 扩展
 
@@ -86,12 +86,12 @@ tags:
 
 2. 在客户机打开IE，输入`IP地址\certsrv` ->选择**申请证书** ->选择**Web浏览器证书** ->输入相关信息，点击提交 ->出现的弹窗都点**是**；
 
-   ![01](\img\day_09_15.png)
+   ![01](..\img\day_09_15.png)
 
 3. 重新输入`IP地址\certsrv`这个网站 -> 回到服务器的**证书颁发机构**，把挂起的证书颁发出去 ->回到客户机，点击**查看的挂起证书申请的状态** ->点击**Web浏览器证书** ->点击**安装此证书** ->对所有的弹窗都选择**是**；
 
-   ![01](\img\day_09_16.png)
+   ![01](..\img\day_09_16.png)
 
 4. 再次用客户机的IE打卡`https`网站，效果如下：
 
-   ![01](\img\day_09_17.png)
+   ![01](..\img\day_09_17.png)
