--- a/_posts/2020-7-16-Linux基础（三）.md
+++ b/_posts/2020-7-16-Linux基础（三）.md
@@ -1,5 +1,4 @@
 ---
-
 layout:     post
 title:     Linux基础（三）
 subtitle:  进程管理、静态IP地址配置、YUM和RPM
@@ -12,10 +11,6 @@ tags:
      - Centos
 ---
 
-
-
-
-
 ## 进程管理
 
 - `ps`：查看系统中的进程状态，语法：`ps [参数]`，常用选项：
@@ -26,11 +21,11 @@ tags:
 
   使用`ps -aux`：查看系统中的所有进程；
 
-  ![进程](\img\linux03_01.png)
+  ![进程](..\img\linux03_01.png)
 
   使用`ps -el`不仅可以查看系统中的所有进程，还可以查看进程的父进程PID以及进程优先级；
 
-  ![linux03_02.png](\img\linux03_02.png)
+  ![linux03_02.png](..\img\linux03_02.png)
 
 - `kill -9  进程号`：通过进程号强制删除某个进程；
 
@@ -96,11 +91,7 @@ tags:
 
 5. `x86_64`：表示适合的硬件平台；（`noarch`表示通用）
 
-   
-
 常用的rpm指令如下：
-
-
 
 - `rpm -qa`:查看系统中所以安装的软件包，结合`grep`指令可以查看系统是否安装某个软件包；
 - `rpm -qi 软件包名`：查看该软件包的详细信息，具体信息如下：
@@ -123,8 +114,6 @@ tags:
 - `rpm -e 软件名`：卸载软件；
 - `rpm -Uvh 包全名`：如果该软件没安装过则直接安装到最新版；
 - `rpm -Fvh 包全名`：该软件必须安装过才能升级；
-
-
 
 ### YUM
 
