--- a/_posts/2020-9-12-信息收集.md
+++ b/_posts/2020-9-12-信息收集.md
@@ -13,8 +13,6 @@ tags:
 ---
 
 
-
-
 # whois查询
 
 - [阿里whois查询](https://whois.aliyun.com/whois/domain/)
@@ -28,35 +26,35 @@ tags:
 
 - Google Hacking
 
-  ![1](\img\information-01.png)
+  ![1](..\img\information-01.png)
 
 - [在线子域名爆破](https://phpinfo.me/domain/)
 
-  ![10](\img\information-10.png)
+  ![10](..\img\information-10.png)
 
 - [DnsDumpster](https://dnsdumpster.com/)
 
-  ![2](\img\information-02.png)
+  ![2](..\img\information-02.png)
 
 - [Censys](https://censys.io/)
 
-  ![3](\img\information-03.png)
+  ![3](..\img\information-03.png)
 
 - [crt](https://crt.sh/)
   
-  ![4](\img\information-04.png)
+  ![4](..\img\information-04.png)
   
 - [threatminter](https://www.threatminer.org/)
   
-  ![5](\img\information-05.png)
+  ![5](..\img\information-05.png)
   
 - [Dnsdb](https://www.dnsdb.io/zh-cn/)
   
-  ![6](\img\information-06.png)
+  ![6](..\img\information-06.png)
   
 - [hackertarget](https://hackertarget.com/find-dns-host-records/)
 
-  ![7](\img\information-07.png)
+  ![7](..\img\information-07.png)
 
 
 
@@ -64,11 +62,11 @@ tags:
 
 - Layer子域名挖掘机
 
-  ![8](\img\information-08.png)
+  ![8](..\img\information-08.png)
 
 - subDomainsBrute
 
-  ![9](\img\information-09.png)
+  ![9](..\img\information-09.png)
 
 ## 其他方式
 
@@ -76,8 +74,6 @@ tags:
 - 邮箱反查询
 - 备案号反查询
 - 查看证书
-
-
 
 # 真实IP
 
@@ -93,9 +89,9 @@ tags:
 
 ## 常见端口
 
-![port-01](\img\port-01.png)
+![port-01](..\img\port-01.png)
 
-![port-02](\img\port-02.png)
+![port-02](..\img\port-02.png)
 
 ## 扫描工具
 
