--- a/_posts/2020-1-20-Java的基础知识（一）.md
+++ b/_posts/2020-1-20-Java的基础知识（一）.md
@@ -10,23 +10,13 @@ tags:
      - Java
 ---
 
-
-
-
-
-
-
 # Java的基础知识
 
 ## Java简介
 
 ​	Java是由Sun Microsystems公司于1995年5月推出的一种编程语言。它是介于**编译型语言**和**解释型语言**之间的。**编译型语言**写的代码是直接编译成机器码然后执行，**解释型语言**可以由解释器直接加载源码然后运行，代价是**运行效率太低**。而Java是将代码编译成一种**“字节码”**，它类似于抽象的CPU指令，然后，针对不同平台编写虚拟机，不同平台的虚拟机负责加载字节码并执行，这样就实现了**“一次编写，到处运行”**的效果。随着Java的发展，它又分为Java SE（标准变）、Java EE（企业版）、Java ME（微型版）这三个版本 。Java SE是整个Java平台的核心，要进行Java Web开发又需要使用Java EE里面的知识。
 
-
-
-​	    						 ![java](/img/java_01.png)
-
-
+​	    						 ![java](../img/java_01.png)
 
 ### Java语言的特性
 
@@ -44,7 +34,7 @@ tags:
 
 ​	JRE(Java Runtime Environment )，也叫**Java运行环境**，就相当于运行**Java字节码**文件的**虚拟机**（JVM）。但是，如果只有Java源码，要编译成Java字节码，就需要**JDK**(Java Development Kit )，因为JDK除了包含JRE，还提供了编译器、调试器等开发工具。 
 
-​			![jdk](/img/java_02.png)
+​			![jdk](../img/java_02.png)
 
 #### JDK的安装
 
