--- a/_posts/2020-5-11-数据链路层、交换机.md
+++ b/_posts/2020-5-11-数据链路层、交换机.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     day_12
+title:     数据链路层、交换机
 subtitle:  数据链路层、交换机
 date:       2020-5-11
 author:     One-Punch-Man
@@ -8,14 +8,14 @@ header-img: "img/man-6.jpg"
 catalog: true
 tags: 
      - 网络安全
-     - 千锋教育
+     - 基础知识
 ---
 
 # 数据链路层
 
 ## 帧结构
 
-![frame](\img\day_12_01.png)
+![frame](..\img\day_12_01.png)
 
 # 交换机
 
@@ -23,11 +23,11 @@ tags:
 
 #### 请求数据时
 
-![](\img\day_12_02.png)
+![](..\img\day_12_02.png)
 
 #### 返回数据时
 
-![](\img\day_12_03.png)
+![](..\img\day_12_03.png)
 
 #### 总结
 
